# System-Programming

lab1/: main.c  solution.c  task_eng.txt  task_rus.txt  test1.txt  vector.h
lab3/: test.c  userfs.c  userfs.h
lab4/: a.out  test.c  thread_pool.c  thread_pool.h
lab5/: CMakeLists.txt  Makefile  chat.h  chat_client.c  chat_server.c  chat_server.h
